k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw3-cicd-ingress
  labels:
    name: hw3-cicd-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-cluster-ip-service
                port:
                  number: 5000
          - backend:
              service:
                name: frontend-cluster-ip-service
                port:
                  number: 3000
            path: /
            pathType: Prefix
